<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.janken.MenuActivity">

    <Button
        android:text="@string/menu_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createOptionButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="112dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:text="@string/menu_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/joinOptionButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createOptionButton"
        app:layout_constraintBottom_toTopOf="@+id/statsOptionButton"
        android:layout_marginBottom="8dp" />

    <Button
        android:text="@string/menu_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statsOptionButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="112dp" />
</android.support.constraint.ConstraintLayout>
