<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="client.janken.PlayActivity">

    <Button
        android:text="@string/ready_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/readyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.75" />

    <Button
        android:text="@string/rock_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rockButton"
        android:layout_marginTop="175dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:text="@string/paper_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paperButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rockButton"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/scissorsButton"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/scissors_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scissorsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player1"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/player4"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.45"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player4"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player3"
        app:layout_constraintLeft_toLeftOf="@+id/player1"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/player4"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/winner_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/winnerText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:text="@string/connected_players_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectedText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/winnerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/winnerText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/paperButton"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:text="@string/wait_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/waitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.25" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameProgress"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.13" />
</android.support.constraint.ConstraintLayout>
